--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
+    dataBinding {
+        enabled = true
+    }
     buildToolsVersion "29.0.2"
 
     defaultConfig {
@@ -47,4 +50,6 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+
+    kapt 'com.android.databinding:compiler:3.6.0-rc01'
 }
